--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "joi": "^17.3.0",
     "knex": "^0.21.15",
     "lodash": "^4.17.20",
-    "nodemon": "^2.0.4",
     "pg": "^8.5.1",
     "swagger-ui-express": "^4.1.6"
   },
@@ -36,6 +35,7 @@
     "supertest": "^6.0.1"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "jest --detectOpenHandles"
   },
   "engines": {
